# Agroforce

./: README  README.md  api.py  app.py  auth.py  database.py  main.py  pyproject.toml  requerimentos.txt  requirements.txt
backend/: ai.py  analysis.py  auth.py  main.py  maps.py  ndvi_service.py  postegres.py  sentinel.py  vra.py  webhook.py
database/: db.py  models.py
frontend/: ai_agro.py  app.py  ndvi.py  ndvi_map.py  requirements.txt  sentinel.py  vra.py
