[tool.poetry]
name = "agro-saas"
version = "0.1.0"
description = "Backend SaaS para Agro"
authors = ["Seu Nome <seu@email>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

# Framework web
fastapi = "^0.110.0"
uvicorn = "^0.23.0"

# ORM / Banco de dados
SQLAlchemy = "^2.0.0"            # Use com a convenção de ORM
databases = "^0.5.6"             # suporte a conexões assíncronas (ex: PostgreSQL)
asyncpg = "^0.27.0"              # driver PostgreSQL assíncrono
psycopg2-binary = "^2.9"          # se usar psycopg2 em alguns cenários (dependência opcional)

# Pydantic para validação (já vem com FastAPI, mas mantenha para clareza)
pydantic = "^1.10.10"

# Mapeamento/ORM helpers (opcional, dependendo da stack)
alembic = "^1.12.0"               # migrations
# python-dotenv para carregar variáveis de ambiente
python-dotenv = "^1.0.0"

# Autenticação/Autorização (opcionais, inclua conforme necessidade)
passlib = "^1.7.4"                 # hashing de senhas
pyjwt = "^2.7.0"                   # JWT

# Testes (dev-dependencies)
[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
httpx = "^0.28.0"                   # client HTTP para testes
pytest-asyncio = "^0.21.0"

# Hooks / tooling
black = "^23.12.0"
ruff = "^0.5.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"